--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <title>My Node Site</title>
+    <title>Proyecto VME BC</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/styles.css" />
@@ -11,11 +11,11 @@
     <body>
     <header>
         <nav class="navbar navbar-inverse">
-        <a href="/" class="navbar-brand">My Site</a>
+        <a href="/" class="navbar-brand">VME</a>
         <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/about">Graficas</a></li>
+            <li><a href="/contact">Informacion</a></li>
         </ul>
         </nav>
     </header>
@@ -25,6 +25,6 @@
         <main>
             <div class="container"><%- body %></div>
         </main>
-        <footer>Awesome Site. Copyright &copy; 2020</footer>
+        <footer>Instituto Tecnologico de Tijuana. Copyright &copy; 2021</footer>
     </body>
 </html>
