--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,17 +2,12 @@
 
 <section class="hero">
     <div class="hero-content">
-      <h2>Welcome to the Site!</h2>
-      <p>The best place to be</p>
+      <h2>Bienvenido al Vizaualizador de Modelos Econometricos</h2>
+      <p>Esta pagina tiene como objetivo la investigación sobre el análisis 
+        del crecimiento económico en Baja California usando técnicas de aprendizaje 
+        máquina para el minado de datos</p>
   
-      <a href="/" class="btn btn-lg btn-primary">Get Started</a>
-      <a href="/contact" class="btn btn-lg btn-primary">Contact</a>
+      <a href="/about" class="btn btn-lg btn-primary">Graficas de Datos</a>
+      <a href="/contact" class="btn btn-lg btn-primary">Informacion</a>
     </div>
   </section>
-
-  <%- contentFor('body') %>
-  <div class="jumbotron text-center">
-    Pagina de inicio
-  </div>
-  
-<%- extra %>
