--- a/views/pages/thank-you.ejs
+++ b/views/pages/thank-you.ejs
@@ -4,7 +4,7 @@
   <div class="hero-content">
     <h2></h2>
     <p><THANK-YOU>GRACIAS X VISITARNOS</THANK-YOU></p>
-    <a href='' class="btn btn-lg btn-primary">GO HOME</a>
+    <a href='' class="btn btn-lg btn-primary">Inicio</a>
   </div>
 </section>
  
