--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,31 +1,12 @@
 <div class="jumbotron text-center">
-    <h1>Contact Page</h1>
+    <h1>Pagina de Referencias</h1>
   
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <h2>Contact Us!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ullam, tempore exercitationem voluptas deserunt culpa, eligendi nemo iste quas nisi ducimus cum sed earum est, laboriosam in cumque ipsum. Nihil.</p>
+        <h2>Fuentes</h2>
+
+        <p>Principales Participantes</p>
   
-        <!--<form action="/contacto" method="POST"> --> 
-        <form action="/contacto" method="GET"> 
-  
-          <div class="form-group">
-            <label>Name</label>
-            <input type="text" name="name" class="form-control" value="1" required placeholder="Nombre completo">
-          </div>
-          <div class="form-group">
-            <label>Email</label>
-            <input type="email" name="email" class="form-control"  
-              placeholder="ejemplo@ejm.com">
-          </div>
-          <div class="form-group">
-            <label>Your Message</label>
-            <input type="text" name="message" class="form-control"required placeholder="Tu mensaje">
-          </div>
-          
-          <div class="form-group text-right">
-            <button type="submit" class="btn btn-primary btn-lg">Send</button>
-          </div>
   
         </form>
       </div>
