* estructura de conexion con la base de datos completada

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -22,8 +22,8 @@
         <table id="Saxofon" class="table table-striped">
             
             <tr>
-                <th class="text-center" >Año</th>
-                <th class="text-center" >Poblacion</th>
+                <th class="text-center" ><%- ficha1 %></th>
+                <th class="text-center" ><%- ficha2 %></th>
             </tr>
             
             <tbody>
