--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,12 +2,12 @@
 
 <section class="hero">
     <div class="hero-content">
-      <h2>Bienvenido al Vizaualizador de Modelos Econometricos</h2>
-      <p>Esta pagina tiene como objetivo la investigación sobre el análisis 
+      <h2>Bienvenido al Visualizador de Modelos Econométricos</h2>
+      <p>Esta página tiene como objetivo la investigación sobre el análisis 
         del crecimiento económico en Baja California usando técnicas de aprendizaje 
         máquina para el minado de datos</p>
   
-      <a href="/about" class="btn btn-lg btn-primary">Graficas de Datos</a>
-      <a href="/contact" class="btn btn-lg btn-primary">Informacion</a>
+      <a href="/about" class="btn btn-primary btn-lg">Graficas de Datos</a>
+      <a href="/contact" class="btn btn-primary btn-lg">Informacion</a>
     </div>
   </section>
